kubernetes/base/thumbor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thumbor-ingress
  namespace: thumbor
  labels:
    k8s-app: thumbor
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: ${SSL_CERT}
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: gce
spec:
  defaultBackend:
    service:
      name: thumbor-service
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thumbor-service
                port:
                  number: 80
